src/v8/CAPI_Lines.pas


  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin      // Search list of Lines in active circuit for name
       WITH ActiveCircuit[ActiveActor].Lines DO
         Begin
             S := Value;  // Convert to Pascal String
             Found := FALSE;
             ActiveSave := ActiveIndex;
             pLine := First;
             While pLine <> NIL Do
             Begin
                IF (CompareText(pLine.Name, S) = 0)
                THEN Begin
                    ActiveCircuit[ActiveActor].ActiveCktElement := pLine;
                    Found := TRUE;
                    Break;
                End;
                pLine := Next;
             End;
             IF NOT Found
             THEN Begin
                 DoSimpleMsg('Line "'+S+'" Not Found in Active Circuit.', 5008);
                 pLine := Get(ActiveSave);    // Restore active Line
                 ActiveCircuit[ActiveActor].ActiveCktElement := pLine;
             End;
         End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Phases(Value: Integer);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)Do Begin
         Nphases := Value;
         YprimInvalid[ActiveActor] := True;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_R1(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         R1 := Value;
         SymComponentsChanged := True;
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X1(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) DO Begin
         X1 := Value;
         SymComponentsChanged := True;
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_C0():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
       Result := C0/UnitsConvert * 1.0e9;
  End

end;
//------------------------------------------------------------------------------
function Lines_Get_C1():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
       Result := C1/UnitsConvert * 1.0e9;
  End;
  
end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Cmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;
   Factor :Double;

begin

  Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         Factor  := TwoPi * BaseFrequency  * 1.0e-9 * UnitsConvert;  // corrected 2.9.2018 RCD
         Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
         k := 0;
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Result[k] :=  Yc.GetElement(i,j).im / Factor;
             Inc(k);
          End;
       End;
  End;

end;
PROCEDURE Lines_Get_Cmatrix_GR();cdecl;
// Same as Lines_Get_Cmatrix but uses global result (GR) pointers
begin
   Lines_Get_Cmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Lines_Get_R0():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
       Result := R0/UnitsConvert;
  End;

end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;

begin
  Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
         k := 0;
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Result[k] :=  Z.GetElement(i,j).Re/UnitsConvert;
             Inc(k);
          End;
       End;
  End;
end;
PROCEDURE Lines_Get_Rmatrix_GR();cdecl;
// Same as Lines_Get_Rmatrix but uses global result (GR) pointers
begin
   Lines_Get_Rmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Lines_Get_X0():Double;cdecl;
begin

  Result := 0.0;

  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
       Result := X0/UnitsConvert;
  End;
 
end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;
begin
  Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
         k := 0;
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Result[k] :=  Z.GetElement(i,j).im/UnitsConvert;
             Inc(k);
          End;
       End;
  End;
end;
PROCEDURE Lines_Get_Xmatrix_GR();cdecl;
// Same as Lines_Get_Xmatrix but uses global result (GR) pointers
begin
   Lines_Get_Xmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Lines_Set_C0(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) DO Begin
         C0 := Value * 1.0e-9;
         SymComponentsChanged := True;
         YprimInvalid[ActiveActor] := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_C1(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) DO Begin
         C1 := Value * 1.0e-9;
         SymComponentsChanged := True;
         YprimInvalid[ActiveActor] := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Factor:Double;
begin
    Value := PDoubleArray(ValuePtr);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         Factor  := TwoPi * BaseFrequency  * 1.0e-9;
         k := (0);
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Yc.SetElement(i,j, Cmplx(0.0, Value[k]*Factor));
             Inc(k);
          End;
         YprimInvalid[ActiveActor] := True;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_R0(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
           R0 := Value;
           SymComponentsChanged := True;
           YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Ztemp:complex;
begin
    Value := PDoubleArray(ValuePtr);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         k := (0);
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             ZTemp := Z.GetElement(i,j);
             Z.SetElement(i,j, Cmplx( Value[k], ZTemp.im));
             Inc(k);
          End;
         YprimInvalid[ActiveActor] := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X0(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         X0 := Value;
         SymComponentsChanged := True;
         YprimInvalid[ActiveActor] := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Ztemp:complex;
begin
    Value := PDoubleArray(ValuePtr);
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement)DO Begin
         k := (0);
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             ZTemp := Z.GetElement(i,j);
             Z.SetElement(i,j, Cmplx(Ztemp.re, Value[k]));
             Inc(k);
          End;
          YprimInvalid[ActiveActor] := True;

       End;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_EmergAmps():Double;cdecl;
begin
   Result := 0.0;
   IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).EmergAmps;
  End
